# shell

./: Cargo.toml  a.txt  build.rs  e.txt  flake.nix  x.blp  x.ui
data/: shell.gresource.xml  style.css
data/blp/: bento.blp  center.blp  notification.blp  notifications.blp  panel.blp  time.blp
src/: bento.rs  center.rs  main.rs  niri.rs  notification.rs  notification_display.rs  notifications-introspect.xml  notifications.rs  panel.rs  time.rs
src/notification_server/: mod.rs  notification.rs  server.rs  store.rs
